<resources>
    <string name="app_name">MobileApp</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="hint_email">Email@gmail.com</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="don_t_you_have_an_account_register">Don\'t you have an account? Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loading">Loading…</string>
    <string name="validation_login">Invalid email or password</string>
    <string name="wrong_login">Email or password is wrong.</string>
    <string name="wrong_email">Email format is wrong</string>
    <string name="blank_email">Email cannot be blank</string>
    <string name="blank_password">Password cannot be blank</string>
    <string name="compare_password">Confirm password must be the same with password</string>
    <string name="products">Products</string>
    <string name="exam_sku">109092</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="status">Status</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="sku">Sku</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_product">Add product</string>
    <string name="update_product">Update product</string>
    <string name="search">Search product</string>
</resources>