<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_8sdp"
    android:background="@drawable/bg_item_product"
    android:paddingHorizontal="@dimen/_6sdp"
    android:paddingVertical="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semibold"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/exam_sku" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6sdp"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_bold"
        android:padding="@dimen/_4sdp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvEdit"
        app:layout_constraintStart_toEndOf="@id/tvSku"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Bejo Jahe Merah" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_6sdp"
        android:fontFamily="@font/nunito_bold"
        android:padding="@dimen/_4sdp"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:padding="@dimen/_4sdp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>