<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/color_2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imvTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@null"
        app:cardCornerRadius="@dimen/_36sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/cvPassword"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/nunito"
            android:hint="@string/email"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@null"
        app:cardCornerRadius="@dimen/_36sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/glMid"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/nunito"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@null"
        app:cardCornerRadius="@dimen/_36sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/cvPassword"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/nunito"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSubmit"
        android:layout_width="0dp"
        android:layout_height="@dimen/_36sdp"
        android:background="@null"
        app:cardCornerRadius="@dimen/_36sdp"
        app:cardElevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="@id/glBot"
        app:layout_constraintEnd_toEndOf="@id/glRight"
        app:layout_constraintStart_toStartOf="@id/glLeft">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_button"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>